--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -28,31 +28,31 @@
 
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li class="active">{% trans 'dissertations' %}</li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li class="active">{% trans 'Dissertations' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'dissertations' %}</h2>
+    <h2>{% trans 'Dissertations' %}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#">{% trans 'all_dissertations' %}</a></li>
-    <li><a href="{% url 'dissertations_wait_list' %}">{% trans 'waiting_dissertations' %}</a></li>
+    <li class="active"><a href="#">{% trans 'All dissertations' %}</a></li>
+    <li><a href="{% url 'dissertations_wait_list' %}">{% trans 'Waiting promotor' %}</a></li>
   </ul>
   <div class="panel panel-default">
     <div class="panel-body">
       {% if adviser_list_dissertations %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'dissertation_adviser_promoteur' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as promotor' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations %}
                   <tr>
@@ -87,15 +87,15 @@
       {% if adviser_list_dissertations_copro %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'dissertation_adviser_copromoteur' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as co⁻promotor' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_copro %}
                   <tr>
@@ -130,15 +130,15 @@
       {% if adviser_list_dissertations_reader %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'dissertation_adviser_reader' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as reader' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_reader %}
                   <tr>
@@ -173,15 +173,15 @@
       {% if adviser_list_dissertations_accompanist %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'adviser_list_dissertations_accompanist' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as accompanist' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_accompanist %}
                   <tr>
@@ -216,15 +216,15 @@
       {% if adviser_list_dissertations_internship %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'adviser_list_dissertations_internship' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as internship master' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_internship %}
                   <tr>
@@ -259,15 +259,15 @@
       {% if adviser_list_dissertations_president %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'adviser_list_dissertations_president' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as president' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
-                  <th>{% trans 'dissertation_title'%}</th>
-                  <th>{% trans 'author'%}</th>
-                  <th>{% trans 'status'%}</th>
-                  <th>{% trans 'offer'%}</th>
-                  <th>{% trans 'year_start'%}</th>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
                 </tr>
                 {% for adviser_list_dissertation in adviser_list_dissertations_president %}
                   <tr>
