--- a/templates/dissertations_wait_list.html
+++ b/templates/dissertations_wait_list.html
@@ -28,16 +28,16 @@
 
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li class="active">{% trans 'dissertations' %}</li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li class="active">{% trans 'Dissertations' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'dissertations' %}</h2>
+    <h2>{% trans 'Dissertations' %}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li><a href="{% url 'dissertations_list' %}">{% trans 'all_dissertations' %}</a></li>
-    <li class="active"><a href="#">{% trans 'waiting_dissertations' %}</a></li>
+    <li><a href="{% url 'dissertations_list' %}">{% trans 'All dissertations' %}</a></li>
+    <li class="active"><a href="#">{% trans 'Waiting promotor' %}</a></li>
   </ul>
   <div class="panel panel-default">
     <div class="panel-body">
@@ -45,15 +45,15 @@
           <div class="col-md-12">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">{% trans 'dissertation_adviser_promoteur' %}</h3>
+                    <h3 class="panel-title">{% trans 'Dissertations as promotor' %}</h3>
                 </div>
                   <table class="table table-hover">
                     <tr>
-                      <th>{% trans 'dissertation_title'%}</th>
-                      <th>{% trans 'author'%}</th>
-                      <th>{% trans 'status'%}</th>
-                      <th>{% trans 'offer'%}</th>
-                      <th>{% trans 'year_start'%}</th>
+                      <th>{% trans 'Title'%}</th>
+                      <th>{% trans 'Author'%}</th>
+                      <th>{% trans 'Status'%}</th>
+                      <th>{% trans 'Program'%}</th>
+                      <th>{% trans 'year beginning'%}</th>
                     </tr>
                     {% for dissertation in roles_list_dissertations %}
                       <tr>
