--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -30,30 +30,30 @@
 {% endblock %}
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li class="active">{% trans 'dissertations' %}</li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li class="active">{% trans 'Dissertations' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'dissertations' %}</h2>
+    <h2>{% trans 'Dissertations' %}</h2>
   </div>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="{% url 'manager_dissertations_list' %}">{% trans 'all_dissertations' %}</a></li>
-    <li><a href="{% url 'manager_dissertations_wait_list' %}">{% trans 'waiting_dissertations' %}</a></li>
+    <li class="active"><a href="{% url 'manager_dissertations_list' %}">{% trans 'All dissertations' %}</a></li>
+    <li><a href="{% url 'manager_dissertations_wait_list' %}">{% trans 'Waiting promotor' %}</a></li>
     {% if show_validation_commission %}
-      <li><a href="{% url 'manager_dissertations_wait_comm_list' %}">{% trans 'waiting_commission' %}</a></li>
+      <li><a href="{% url 'manager_dissertations_wait_comm_list' %}">{% trans 'Waiting commission' %}</a></li>
     {% endif %}
     {% if show_evaluation_first_year %}
-      <li><a href="{% url 'manager_dissertations_wait_eval_list' %}">{% trans 'waiting_evaluation' %}</a></li>
+      <li><a href="{% url 'manager_dissertations_wait_eval_list' %}">{% trans 'Waiting 1st year evaluation' %}</a></li>
     {% endif %}
-    <li><a href="{% url 'manager_dissertations_wait_recep_list' %}">{% trans 'waiting_reception' %}</a></li>
+    <li><a href="{% url 'manager_dissertations_wait_recep_list' %}">{% trans 'Waiting reception' %}</a></li>
   </ul>
   <div class="panel panel-default">
     <div class="panel-body">
       <form method="get" action="{% url 'manager_dissertations_search'%}">
         <div class="row">
           <div class="col-md-10">
-              <input class="form-control" id="txt_search" placeholder="{% trans 'search' %}" name="search"
+              <input class="form-control" id="txt_search" placeholder="{% trans 'Search' %}" name="search"
                      value="{{ request.GET.search }}">
           </div>
           <div id="to_hide">
@@ -72,7 +72,7 @@
                   {{ academic_year }}
               </div>
               <div class="col-md-3">
-                  <label for="offer_prop_search">{% trans 'offers' %}</label>
+                  <label for="offer_prop_search">{% trans 'Program' %}</label>
                       <select name="offer_prop_search" id="offer_prop_search" class="form-control">
                         <option value=""></option>
                       {% for offer_prop in offer_props %}
@@ -87,7 +87,7 @@
                   {{ academic_year }}
               </div>
               <div class="col-md-4">
-                  <label for="status_search">{% trans 'status' %}</label>
+                  <label for="status_search">{% trans 'Status' %}</label>
                   <select name="status_search" id="status_search" class="form-control">
                     <option value=""></option>
                     <option value="DRAFT"{% if status_search  ==  "DARFT" %} selected {% endif %}>{% trans 'Draft'%}</option>
@@ -108,21 +108,21 @@
           </div>
           <div class="pull-right col-md-2">
             <button type="submit" id="bt_submit_manager_information_search" class="btn btn-primary" role="button"
-            title="{% trans 'search' %}"><span class="glyphicon glyphicon-search"
+            title="{% trans 'Search' %}"><span class="glyphicon glyphicon-search"
             aria-hidden="true"></span></button>
             <button type="submit" id="bt_submit_manager_information_xlsx" class="btn btn-default" role="button"
-            title="{% trans 'export_search_as_xls' %}" name="bt_xlsx" value="bt_xlsx"><span class="glyphicon glyphicon-download-alt"
+            title="{% trans 'Export search as XLS' %}" name="bt_xlsx" value="bt_xlsx"><span class="glyphicon glyphicon-download-alt"
             aria-hidden="true" ></span></button>
 
             <a href="{% url 'manager_dissertations_new' %}" id="lnk_manager_dissertations_new" class="btn btn-default"
-            role="button" title="{% trans 'create_dissertation'%}" style="margin-left:1em;" value='hide/show'><span class="glyphicon glyphicon-plus"
+            role="button" title="{% trans 'Add dissertation'%}" style="margin-left:1em;" value='hide/show'><span class="glyphicon glyphicon-plus"
             aria-hidden="true"></span></a>
           </div>
 
         </div>
             <div id="hideshow">
                 <a id="" role="button">
-                <h5>{% trans 'advanced_search' %}
+                <h5>{% trans 'Advanced search' %}
                 <i class="glyphicon glyphicon-collapse-down"></i></h5>
                 </a>
             </div>
@@ -130,17 +130,17 @@
 
         {% if dissertations|length == 0 %}
           <br>
-          <label class="alert alert-info" style="margin-left:10%;width:80%;text-align:center;">{% trans 'no_result' %}</label>
+          <label class="alert alert-info" style="margin-left:10%;width:80%;text-align:center;">{% trans 'No result' %}</label>
         {% else %}
         <br>
           <table class="table table-hover" id="tb_memoire">
             <thead>
-              <th>{% trans 'title'%}</th>
-              <th>{% trans 'author'%}</th>
-              <th>{% trans 'status'%}</th>
-              <th>{% trans 'offer'%}</th>
-              <th>{% trans 'year_start'%}</th>
-              <th>{% trans 'proposition_dissertation'%}</th>
+              <th>{% trans 'Title'%}</th>
+              <th>{% trans 'Author'%}</th>
+              <th>{% trans 'Status'%}</th>
+              <th>{% trans 'Program'%}</th>
+              <th>{% trans 'year beginning'%}</th>
+              <th>{% trans 'Dissertation subject'%}</th>
             </thead>
             {% for dissertation in dissertations %}
             <tr class="visible" style="display: table-row;">
@@ -213,25 +213,25 @@
                 "language":
                 {
 
-                    "sProcessing":     "{% trans 'datatable_processing'%}",
-                    "sSearch":         "{% trans 'datatable_search'%}",
+                    "sProcessing":     "{% trans 'Processing...'%}",
+                    "sSearch":         "{% trans 'Search:'%}",
                     "sLengthMenu":     "&nbsp;&nbsp;&nbsp;_MENU_ &eacute;l&eacute;ments",
-                    "sInfo":           "{% trans 'datatable_info'%}",
-                    "sInfoEmpty":      "{% trans 'datatable_infoempty'%}",
-                    "sInfoFiltered":   "{% trans 'datatable_infofiltered'%}",
+                    "sInfo":           "{% trans 'Showing _START_ to _END_ of _TOTAL_ entries'%}",
+                    "sInfoEmpty":      "{% trans 'Showing 0 to 0 of 0 entries'%}",
+                    "sInfoFiltered":   "{% trans '(filtered from _MAX_ total entries)'%}",
                     "sInfoPostFix":    "{% trans 'datatable_infopostfix'%}",
-                    "sLoadingRecords": "{% trans 'datatable_loadingrecords'%}",
-                    "sZeroRecords":    "{% trans 'datatable_zerorecords'%}",
-                    "sEmptyTable":     "{% trans 'datatable_emptytable'%}",
+                    "sLoadingRecords": "{% trans 'Loading...'%}",
+                    "sZeroRecords":    "{% trans 'No matching records found'%}",
+                    "sEmptyTable":     "{% trans 'No data available in table'%}",
                 "oPaginate": {
-                    "sFirst":      "{% trans 'datatable_first'%}",
-                    "sPrevious":   "{% trans 'datatable_previous'%}",
-                    "sNext":       "{% trans 'datatable_next'%}",
-                    "sLast":       "{% trans 'datatable_last'%}"
+                    "sFirst":      "{% trans 'First'%}",
+                    "sPrevious":   "{% trans 'Previous'%}",
+                    "sNext":       "{% trans 'Next'%}",
+                    "sLast":       "{% trans 'Last'%}"
                             },
             "oAria": {
-                    "sSortAscending":  "{% trans 'datatable_sortascending'%}",
-                    "sSortDescending": "{% trans 'datatable_sortdescending'%}",
+                    "sSortAscending":  "{% trans ': activate to sort column ascending'%}",
+                    "sSortDescending": "{% trans ': activate to sort column descending'%}",
                     }
                 }
             });
