--- a/templates/manager_informations_add.html
+++ b/templates/manager_informations_add.html
@@ -28,13 +28,13 @@
 
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li><a href="{% url 'manager_informations' %}" id="lnk_manager_informations">{% trans 'teachers' %}</a></li>
-  <li class="active">{% trans 'new_adviser' %}</li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li><a href="{% url 'manager_informations' %}" id="lnk_manager_informations">{% trans 'Teachers' %}</a></li>
+  <li class="active">{% trans 'Add teacher' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
-    <h2>{% trans 'new_adviser' %}</h2>
+    <h2>{% trans 'Add teacher' %}</h2>
 </div>
 <div class="panel panel-default">
     <div class="panel-body">
@@ -42,7 +42,7 @@
             {% csrf_token %}
             <div class="row">
               <div class="col-md-9 col-md-offset-1">
-                  <label for="person">{% trans 'person_to_add' %} : </label>
+                  <label for="person">{% trans 'Person to add' %} : </label>
                 <input type="hidden" name="person" id="person" value={{ pers.id }}>
                 {{ pers }}
               </div>
@@ -54,7 +54,7 @@
                         style="margin:-6px;" type="checkbox" {% if form.available_by_email.value %} checked {% endif %} >
                 </div>
                 <div class="col-md-9">
-                    <label for="txt_available_by_email">{% trans 'available_by_email' %}</label>
+                    <label for="txt_available_by_email">{% trans 'Available by e-mail' %}</label>
                 </div>
             </div>
             <div class="row {% if field.errors %}error{% endif %}"  style="padding-top: 4px;">
@@ -63,7 +63,7 @@
                         style="margin:-6px;" type="checkbox" {% if form.available_by_phone.value %} checked {% endif %} >
                 </div>
                 <div class="col-md-9">
-                    <label for="txt_available_by_phone">{% trans 'available_by_phone' %}</label>
+                    <label for="txt_available_by_phone">{% trans 'Available by phone' %}</label>
                 </div>
             </div>
             <div class="row {% if field.errors %}error{% endif %}"  style="padding-top: 4px;">
@@ -72,19 +72,19 @@
                         style="margin:-6px;" type="checkbox" {% if form.available_at_office.value %} checked {% endif %} >
                 </div>
                 <div class="col-md-9">
-                    <label for="txt_available_at_office">{% trans 'available_at_office' %}</label>
+                    <label for="txt_available_at_office">{% trans 'Available at office' %}</label>
                 </div>
             </div>
             <br>
             <div class="row {% if field.errors %}error{% endif %}">
                 <div class="col-md-9 col-lg-offset-1 form-group">
-                    <label for="txt_comment">{% trans 'comment' %}</label>
+                    <label for="txt_comment">{% trans 'Comment' %}</label>
                     <textarea class="form-control" id="txt_comment"  name="comment" rows="10">{{ form.comment.value }}</textarea>
                 </div>
             </div>
             <br>
             <div style="text-align: right;">
-                <button type="submit" class="save btn btn-primary">{% trans 'save' %}</button>
+                <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
             </div>
         </form>
     </div>
