--- a/templates/manager_informations_edit.html
+++ b/templates/manager_informations_edit.html
@@ -28,10 +28,10 @@
 
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'teachers' %}</a></li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li><a href="{% url 'manager_informations' %}" id="lnk_teachers">{% trans 'Teachers' %}</a></li>
   <li><a href="{% url 'manager_informations_detail' pk=adviser.pk %}">{{ adviser.person.last_name }}, {{ adviser.person.first_name }}</a></li>
-  <li class="active">{% trans 'edit' %}</li>
+  <li class="active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
@@ -47,7 +47,7 @@
                              type="checkbox" {% if form.available_by_email.value %} checked {% endif %} >
                     </div>
                     <div class="col-md-11" style="padding-top: 4px;">
-                        <label for="txt_available_by_email">{% trans 'available_by_email' %} ({{  email }})</label>
+                        <label for="txt_available_by_email">{% trans 'Available by e-mail' %} ({{  email }})</label>
                     </div>
                 </div>
                 <div class="row {% if field.errors %}error{% endif %}">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-md-11" style="padding-top: 4px;">
                        <label for="txt_available_by_phone">
-                           {% trans 'available_by_phone' %} ({{  phone }}
+                           {% trans 'Available by phone' %} ({{  phone }}
                            {% if phone_mobile %}- {{  phone_mobile }}{% endif %})
                        </label>
                     </div>
@@ -68,19 +68,19 @@
                             type="checkbox" {% if form.available_at_office.value %} checked {% endif %} >
                     </div>
                     <div class="col-md-11" style="padding-top: 4px;">
-                       <label for="txt_available_at_office">{% trans 'available_at_office' %}</label>
+                       <label for="txt_available_at_office">{% trans 'Available at office' %}</label>
                     </div>
                 </div>
                 <br>
                 <div class="row {% if field.errors %}error{% endif %}">
                     <div class="col-md-10 col-md-offset-1 form-group">
-                        <label for="txt_comment">{% trans 'comment' %}</label>
+                        <label for="txt_comment">{% trans 'Comment' %}</label>
                         <textarea class="form-control" id="txt_comment"  name="comment" rows="10">{{ form.comment.value }}</textarea>
                     </div>
                 </div>
                 <br>
                 <div style="text-align: right;">
-                    <button type="submit" class="save btn btn-primary">{% trans 'save' %}</button>
+                    <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
                 </div>
           </form>
       </div>
