--- a/templates/manager_offer_parameters_edit.html
+++ b/templates/manager_offer_parameters_edit.html
@@ -30,13 +30,13 @@
 {% endblock %}
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li><a href="{% url 'manager_offer_parameters' %}" id="lnk_parameters">{% trans 'parameters' %}</a></li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li><a href="{% url 'manager_offer_parameters' %}" id="lnk_parameters">{% trans 'Settings' %}</a></li>
   <li class="active">{{ offer_proposition.acronym }}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'parameters' %} {{ offer_proposition.acronym }}</h2>
+    <h2>{% trans 'Settings' %} {{ offer_proposition.acronym }}</h2>
   </div>
   <div class="panel panel-default">
     <div class="panel-body">
@@ -47,7 +47,7 @@
                   {{ form.offer }}{{ form.acronym }}
                 </div>
             </div>
-            <h3>{% trans 'periode_visibility_proposition'%}</h3>
+            <h3>{% trans 'Period of visibility for dissertation subjects'%}</h3>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="txt_start_visibility_proposition" {% if form.start_visibility_proposition.errors %}
@@ -64,7 +64,7 @@
                            name="end_visibility_proposition" id="txt_end_visibility_proposition">
                 </div>
             </div>
-            <h3>{% trans 'periode_visibility_dissertation'%}</h3>
+            <h3>{% trans 'Period of possibility to create dissertations projects'%}</h3>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="txt_start_visibility_dissertation" {% if form.start_visibility_dissertation.errors %}
@@ -81,7 +81,7 @@
                            name="end_visibility_dissertation" id="txt_end_visibility_dissertation">
                 </div>
             </div>
-            <h3>{% trans 'periode_jury_visibility'%}</h3>
+            <h3>{% trans 'Period of visibility for dissertation jurys'%}</h3>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="txt_start_jury_visibility" {% if form.start_jury_visibility.errors %}
@@ -98,7 +98,7 @@
                            name="end_jury_visibility" id="txt_end_jury_visibility">
                 </div>
             </div>
-            <h3>{% trans 'periode_edit_title'%}</h3>
+            <h3>{% trans 'Period of possibility to edit dissertations titles'%}</h3>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="txt_start_edit_title" {% if form.start_edit_title.errors %}
@@ -115,14 +115,14 @@
                            name="end_edit_title" id="txt_end_edit_title">
                 </div>
             </div>
-            <h3>{% trans 'parameters_others'%}</h3>
+            <h3>{% trans 'Other settings'%}</h3>
             <div class="row">
                 <div class="col-md-1">
                     <input class="form-control" id="txt_student_can_manage_readers"  name="student_can_manage_readers"
                            style="margin:-6px;" type="checkbox" {% if form.student_can_manage_readers.value %} checked {% endif %}>
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_student_can_manage_readers">{% trans 'student_can_manage_readers' %}</label>
+                    <label for="txt_student_can_manage_readers">{% trans 'Students can manage readers' %}</label>
                 </div>
             </div>
             <br>
@@ -132,7 +132,7 @@
                            style="margin:-6px;" type="checkbox" {% if form.adviser_can_suggest_reader.value %} checked {% endif %}>
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_adviser_can_suggest_reader">{% trans 'adviser_can_suggest_reader' %}</label>
+                    <label for="txt_adviser_can_suggest_reader">{% trans 'Adviser can manage jury members' %}</label>
                 </div>
             </div>
             <br>
@@ -142,7 +142,7 @@
                            style="margin:-6px;" type="checkbox" {% if form.evaluation_first_year.value %} checked {% endif %}>
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_evaluation_first_year">{% trans 'evaluation_first_year' %}</label>
+                    <label for="txt_evaluation_first_year">{% trans 'First year evaluation' %}</label>
                 </div>
             </div>
             <br>
@@ -152,7 +152,7 @@
                            style="margin:-6px;" type="checkbox" {% if form.validation_commission_exists.value %} checked {% endif %}>
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_validation_commission_exists">{% trans 'validation_commission_exists' %}</label>
+                    <label for="txt_validation_commission_exists">{% trans 'Validation commission exists' %}</label>
                 </div>
             </div>
             <br>
@@ -162,11 +162,11 @@
                            style="margin:-6px;" type="checkbox" {% if form.global_email_to_commission.value %} checked {% endif %}>
                 </div>
                 <div class="col-md-5">
-                    <label for="txt_global_email_to_commission">{% trans 'send_email_to_commission_accepted' %}</label>
+                    <label for="txt_global_email_to_commission">{% trans 'Send an email to reading commission when acceptation of evaluation commission' %}</label>
                 </div>
             </div>
             <br>
-            <button type="submit" class="save btn btn-primary">{% trans 'save' %}</button>
+            <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
         </form>
     </div>
   </div>
