--- a/templates/proposition_dissertation_edit.html
+++ b/templates/proposition_dissertation_edit.html
@@ -28,14 +28,14 @@
 
 {% block breadcrumb %}
   <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
-  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'dissertations' %}</a></li>
-  <li><a href="{% url 'my_dissertation_propositions' %}" id="lnk_propositions">{% trans 'subjects' %}</a></li>
+  <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
+  <li><a href="{% url 'my_dissertation_propositions' %}" id="lnk_propositions">{% trans 'Dissertation subjects' %}</a></li>
   <li><a href="{% url 'proposition_dissertation_detail' pk=prop_dissert.pk %}">{{ prop_dissert.title }}</a></li>
-  <li class="active">{% trans 'edit' %}</li>
+  <li class="active">{% trans 'Edit' %}</li>
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'edit' %} : {{ prop_dissert.title }}</h2>
+    <h2>{% trans 'Edit' %} : {{ prop_dissert.title }}</h2>
   </div>
   <div class="panel panel-default">
     <div class="panel-body">
@@ -48,7 +48,7 @@
         </div>
         <div class="panel-group">
             <label for="txt_title" {% if form.title.errors %} style="color:red;" {% endif %}>
-                {% trans 'title' %}
+                {% trans 'Title' %}
                 {% for error in form.title.errors %}
                     <br>{{ error|escape }}
                 {% endfor %}
@@ -57,16 +57,16 @@
                 style="margin:-6px;" value="{{ form.title.value }}">
         </div>
         <div class="form-group">
-            <label for="txt_visibility">{% trans 'visibility' %}</label>
+            <label for="txt_visibility">{% trans 'Visibility' %}</label>
             <input id="txt_visibility"  name="visibility"
                    style="margin-left:6px;" type="checkbox" {% if form.visibility.value %} checked {% endif %}>
         </div>
         <div class="panel-group">
-            <label for="txt_description">{% trans 'description' %}</label>
+            <label for="txt_description">{% trans 'Description' %}</label>
             <textarea class="form-control" id="txt_description"  name="description" rows="10" style="margin:-6px;">{{ form.description.value }}</textarea>
         </div>
         <div class="panel-group">
-            <label for="txt_type">{% trans 'subject_type' %}</label>
+            <label for="txt_type">{% trans 'Subject type' %}</label>
             <select class="form-control" id="txt_type"  name="type" style="margin:-6px;">
                 {% for type in types_choices %}
                     <option value="{{ type.0 }}" {% if form.type.value == type.0 %}selected{% endif %}>{{ type.1}}</option>
@@ -74,7 +74,7 @@
             </select>
         </div>
         <div class="panel-group">
-            <label for="txt_level">{% trans 'level' %}</label>
+            <label for="txt_level">{% trans 'Subject developement level' %}</label>
             <select class="form-control" id="txt_level"  name="level" style="margin:-6px;">
                 {% for level in levels_choices %}
                     <option value="{{ level.0 }}" {% if form.level.value == level.0 %}selected{% endif %}>{{ level.1}}</option>
@@ -82,7 +82,7 @@
             </select>
         </div>
         <div class="panel-group">
-            <label for="txt_collaboration">{% trans 'collaboration' %}</label>
+            <label for="txt_collaboration">{% trans 'Collaboration' %}</label>
             <select class="form-control" id="txt_collaboration"  name="collaboration" style="margin:-6px;">
                 {% for collaboration in collaborations_choices %}
                     <option value="{{ collaboration.0 }}" {% if form.collaboration.value == collaboration.0 %}selected{% endif %}>{{ collaboration.1}}</option>
@@ -91,7 +91,7 @@
         </div>
         <div class="panel-group">
             <label for="txt_max_students_number" {% if form.max_number_student.errors %} style="color:red;" {% endif %}>
-                {% trans 'max_students_number' %}
+                {% trans 'Indicative number of places for this subject' %}
                 {% for error in form.max_number_student.errors %}
                     <br>{{ error|escape }}
                 {% endfor %}
@@ -101,7 +101,7 @@
         </div>
         <div class="panel-group">
             <label for="txt_level" {% if offer_propositions_error %} style="color:red;" {% endif %}>
-                {% trans 'select_course_programs' %}
+                {% trans 'Check the programs related to this topic' %}
                 {% if offer_propositions_error %}
                     <br>{% trans offer_propositions_error %}
                 {% endif %}
@@ -143,7 +143,7 @@
         </div>
         <div style="text-align: right;">
             <button type="submit" class="save btn btn-primary">
-                {% trans 'save' %}
+                {% trans 'Save' %}
             </button>
         </div>
       </form>
